Some cleanup based on Intellij code analysis.